--- a/modules/home-manager/hyprland/plugins/hyprpaper.conf
+++ b/modules/home-manager/hyprland/plugins/hyprpaper.conf
@@ -1,4 +1,4 @@
-    preload = /home/nicolas/nixos/assets/wallpapers/default-big.png
-    wallpaper = ,/home/nicolas/nixos/assets/wallpapers/default-big.png
+    preload = /home/nicolas/Pictures/wallpapers/jpg3.jpg
+    wallpaper = ,/home/nicolas/Pictures/wallpapers/jpg3.jpg
     splash = false
     ipc = off
