--- a/modules/home-manager/hyprland/plugins/hypridle.conf
+++ b/modules/home-manager/hyprland/plugins/hypridle.conf
@@ -8,6 +8,6 @@ general {
 
 listener {
     timeout = 300                            # in seconds
-    on-timeout = notify-send "You are idle!" # command to run when timeout has passed
-    on-resume = notify-send "Welcome back!"  # command to run when activity is detected after timeout has fired.
+    on-timeout = hyprctl dispatch dpms off # command to run when timeout has passed
+    on-resume = hyprctl dispatch dpms on  # command to run when activity is detected after timeout has fired.
 }
