--- a/modules/home-manager/hyprland/plugins/hypridle.conf
+++ b/modules/home-manager/hyprland/plugins/hypridle.conf
@@ -7,7 +7,12 @@ general {
 }
 
 listener {
-    timeout = 300                            # in seconds
+    timeout = 600 # in seconds
     on-timeout = hyprctl dispatch dpms off # command to run when timeout has passed
     on-resume = hyprctl dispatch dpms on  # command to run when activity is detected after timeout has fired.
+}
+
+listener {
+    timeout = 1200 # in seconds
+    on-timeout = systemctl suspend
 }
