--- a/modules/home-manager/hyprland/plugins/hypridle.conf
+++ b/modules/home-manager/hyprland/plugins/hypridle.conf
@@ -6,11 +6,11 @@ general {
     ignore_dbus_inhibit = false             # whether to ignore dbus-sent idle-inhibit requests (used by e.g. firefox or steam)
 }
 
-listener {
-    timeout = 600 # in seconds
-    on-timeout = hyprctl dispatch dpms off # command to run when timeout has passed
-    on-resume = hyprctl dispatch dpms on  # command to run when activity is detected after timeout has fired.
-}
+# listener {
+#     timeout = 600 # in seconds
+#     on-timeout = hyprctl dispatch dpms off # command to run when timeout has passed
+#     on-resume = hyprctl dispatch dpms on  # command to run when activity is detected after timeout has fired.
+# }
 
 listener {
     timeout = 1200 # in seconds
